--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "scrollreveal": "^4.0.5",
     "styled-components": "^5.3.0",
     "@react-three/drei": "^9.92.7",
-    "three": "^0.160.0"
+    "three": "^0.160.0",
+    "sharp": "^0.32.5"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
