--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@react-three/drei": "^9.92.7",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.4.1",
@@ -51,6 +52,7 @@
     "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "lodash": "^4.17.19",
+    "node-stream": "^1.7.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -58,10 +60,9 @@
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
+    "sharp": "^0.32.5",
     "styled-components": "^5.3.0",
-    "@react-three/drei": "^9.92.7",
-    "three": "^0.160.0",
-    "sharp": "^0.32.5"
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
