--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     ]
   },
   "dependencies": {
-    "@react-three/drei": "^9.92.7",
     "animejs": "^3.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.4.1",
@@ -39,7 +38,7 @@
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-netlify": "^3.4.0",
-    "gatsby-plugin-offline": "^5.24.0",
+    "gatsby-plugin-offline": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
     "gatsby-plugin-robots-txt": "^1.5.6",
     "gatsby-plugin-sharp": "^3.4.1",
@@ -52,7 +51,6 @@
     "gatsby-transformer-remark": "^4.1.0",
     "gatsby-transformer-sharp": "^3.4.0",
     "lodash": "^4.17.19",
-    "node-stream": "^1.7.0",
     "prismjs": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -60,9 +58,7 @@
     "react-helmet": "^6.1.0",
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
-    "sharp": "^0.32.5",
-    "styled-components": "^5.3.0",
-    "three": "^0.160.0"
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -78,7 +74,6 @@
     "gatsby-remark-code-titles": "^1.1.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.1.2",
-    "prettier": "^2.2.1",
-    "yarn": "^1.0.0"
+    "prettier": "^2.2.1"
   }
 }
